--- a/client/login.html
+++ b/client/login.html
@@ -205,7 +205,7 @@
           const password = document.getElementById("password").value;
         
           try {
-            const res = await fetch("http://localhost:8000/login", {
+            const res = await fetch("https://chat-x-1-9.onrender.com/login", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({ username, password })
