--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
   <!-- Top Header -->
   <div class="header">
     <div class="logo">Chat X</div>
-    <div class="welcome">Welcome, <span id="user-greeting">User</span></div>
+    <div class="welcome">Welcome <span id="user-greeting">User</span></div>
   </div>
 
   <!-- Main Chat Layout -->
